# leed-gen-system

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  go.mod  go.sum  init.sql  setup.sh
deploy/: docker-compose.yml
pkg/auth/: README.md  auth.go
pkg/campaign/: README.md  service.go
pkg/config/: config.go
pkg/db/: db.go
pkg/models/: campaign.go  lead.go  profile.go  user.go
pkg/queue/: queue.go
pkg/redis/: redis.go
pkg/users/: users.go
services/antidetect-service/: main.go
services/api-gateway/: main.go
services/backend/: Dockerfile  README.md  main.go
services/frontend/: .dockerignore  .env.local  Dockerfile  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
services/frontend/app/: globals.css  layout.tsx  page.tsx
services/frontend/app/(auth)/: layout.tsx
services/frontend/app/(dashboard)/: layout.tsx
services/frontend/components/campaigns/: CampaignCreateModal.tsx  CampaignPipeline.tsx  CampaignTable.tsx
services/frontend/hooks/: useAuth.ts  useCampaigns.ts
services/frontend/lib/: api.ts
services/frontend/providers/: Providers.tsx
services/frontend/types/: auth.ts  campaign.ts  pipeline.ts
services/postgres/: .dockerignore  .user.sql.swp  Dockerfile
services/postgres/init-scripts/: 01_core_schema.sql  02_auth_subscription.sql  03_seed_data.sql
services/proxy-manager/: main.go
services/scrape-worker/: Cargo.toml
services/scrape-worker/src/: main.rs
services/search-worker/: main.go
services/validation-worker/: main.go
(+8 files in other folders)
